DevOps/Kubernetes/Manifests/Startup Probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: startup-probe-pod
spec:
  containers:
    - name: my-app
      image: my-app-image
      startupProbe:
        httpGet:
          path: /healthz
          port: 8080
        failureThreshold: 30
        periodSeconds: 10
